# aisprust

./: .gitignore  Cargo.toml  README.md  connection.txt
crates/aisp/: Cargo.toml
crates/aisp/src/: lib.rs
crates/aisp/src/io/: endianness.rs  (+8 more)
crates/aisp_hook/: Cargo.toml  build.rs
crates/aisp_hook/lib/detours/: detours.x64.lib  detours.x86.lib
crates/aisp_hook/src/: lib.rs
crates/aisp_hook/src_cpp/: Main.cpp  log.h
crates/aisp_hook/src_cpp/sdk/: aistd.h  item_table.h  ivce.h  vce.h
crates/aisp_launcher/: Cargo.toml  build.rs
crates/aisp_launcher/src/: main.rs
crates/aisp_packet/: Cargo.toml  build.rs
crates/aisp_packet/src/: deserializer.rs  error.rs  lib.rs  macros.rs  serializer.rs
crates/aisp_packet/src/packets/: adventure.rs  ai.rs  areasv.rs  auth.rs  avatar.rs  channel.rs  circle.rs  enquete.rs  friend.rs  heroine.rs  item.rs  mail.rs  mascot.rs  misc.rs  mod.rs  msg.rs  myprofile.rs  myroom.rs  npc.rs  ping.rs  quest.rs  robo.rs  version.rs  world.rs
crates/aisp_packet/src/shared/: chara.rs  item.rs  mod.rs  server.rs
crates/aisp_packet/src/util/: fixed_array.rs  mod.rs
crates/aisp_packet/utils/: sort_structures.py
crates/aisp_packet_macros/: Cargo.toml
crates/aisp_packet_macros/src/: lib.rs
crates/aisp_server/: Cargo.toml
crates/aisp_server/src/: main.rs
crates/aisp_server/src/compression/: compression.rs  lzp_compression.rs  mod.rs  zlib_compression.rs
crates/aisp_server/src/crypt/: blowfish.rs  camellia.rs  camellia_provider.rs  crypt_provider.rs  crypto.rs  crypto_stream.rs  encryption.rs  mod.rs  rijndael.rs
crates/aisp_server/src/net/: mod.rs  net_error.rs  packet_handler.rs  server_backend.rs  stream_buffer.rs  vce_codec.rs  vce_peer.rs  vce_server.rs
crates/aisp_server/src/servers/: area_server.rs  auth_server.rs  mod.rs  msg_server.rs
crates/fmt_c/: Cargo.toml
crates/fmt_c/src/: lib.rs
crates/packfileutil/: Cargo.toml
crates/packfileutil/src/: main.rs
(+9 files in other folders)
