[package]
name = "aisp_hook"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.2.29"
xwin = "0.6.6"
ureq = "3.0.12"
indicatif = "*"

# [dependencies]
# retour = "0.4.0-alpha.3"
# windows = { version = "0.61.3", features = [
#   "Win32_Foundation",
#   "Win32_Security",
#   "Win32_System_LibraryLoader",
#   "Win32_System_Memory",
#   "Win32_System_Diagnostics_Debug",
#   "Win32_System_Threading",
#   "Win32_System_SystemServices",
#   "Win32_System_Console",
# ] }
