[package]
name = "aisp_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
  "Win32_System_Environment",
  "Win32_System_Console",
] }
argp = "0.4"
tokio = { version = "1", features = ["full"] }

[target.x86_64-pc-windows-msvc]
runner = "cargo xwin"
