[package]
name = "aisp_packet"
version = "0.1.0"
edition = "2024"


[dependencies]
aisp = { path = "../aisp" }
aisp_packet_macros = { path = "../aisp_packet_macros" }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
bincode = "2.0"
encoding_rs = "0.8"


[build-dependencies]
quote = "1.0"
walkdir = "2.5"
syn = { version = "2.0", features = ["full"] }
regex = "1.11"
