[package]
name = "aisp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
aisp = { path = "../aisp" }
aisp_packet = { path = "../aisp_packet" }
flate2 = "1.1"
rsa = "0.9"
camellia = "0.1.0"
rand = "0.9"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
# rand_core = "0.9"
#

csv = "1.3"
pretty-hex = "0.4"
